# faker-extensions

./: README.md  README_ru.md  README_ua.md  pyproject.toml
.github/workflows/: publish.yml
tests/: identifiers_test.py
