[project]
name = "faker_researcher_ids"
version = "1.0.0"
authors = [
    {name="Alexander Tislichenko", email="altis1024@gmail.com"}
]
description = "Fake researcher IDs in scientific databases and publication tracking systems"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "faker>=37.8.0",
]

[project-urls]
Homepage = "https://github.com/AlTisl/faker-extensions"

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
